added aria labels for pause button

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -294,7 +294,7 @@
               </div>
             </div>
           </div>
-          <button class="btn__pause">
+          <button aria-label="Pause Button" class="btn__pause">
             <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="11" cy="11" r="9" fill="var(--blue-200)" />
               <path class="" fill-rule="evenodd" clip-rule="evenodd" d="M10 7H7V15H10V7ZM15 7H12V15H15V7Z"
