optimized app mockups and made more accessible

--- a/index.html
+++ b/index.html
@@ -432,7 +432,10 @@
 
       <article class="app--blue">
         <div class="app__container flex jc-c ai-c gap--sm">
-          <img class="app__mockup app__mockup--left" src="images/illustrations/app-control.png" alt="">
+          <picture>
+            <source srcset="images/illustrations/app-control.webp">
+            <img class="app__mockup app__mockup--left" src="images/illustrations/app-control.png" alt="Mockup of the Digital Shovel web application showcasing some the customizable configurations.">
+          </picture>
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
               <img src="images/icons/icon_filter.svg" alt="">
@@ -475,13 +478,19 @@
               </svg>
             </a>
           </div>
-          <img class="app__mockup app__mockup--right" src="images/illustrations/app-monitor.png" alt="">
+          <picture>
+            <source srcset="images/illustrations/app-monitor.webp">
+            <img class="app__mockup app__mockup--right" src="images/illustrations/app-monitor.png" alt="Mockup of the Digital Shovel web application showcasing its real-time data monitoring capabilities.">
+          </picture>
         </div>
       </article>
 
       <article class="app--blue">
         <div class="app__container flex jc-c ai-c gap--sm">
-          <img class="app__mockup app__mockup--left" src="images/illustrations/app-alerts.png" alt="">
+          <picture>
+            <source srcset="images/illustrations/app-alerts.webp">
+            <img class="app__mockup app__mockup--left" src="images/illustrations/app-alerts.png" alt="Mockup of the Digital Shovel web application showcasing its ability to send email alerts and notifications.">
+          </picture>
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
               <img src="images/icons/icon_alerts.svg" alt="">
