added set widths and heights to all homepage imgs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <ul class="dropdown__menu">
             <li>
               <a class="dropdown__link" href="products-minipod.html">
-                <img src="images/icons/icon_minipod.svg" alt="Minipod Icon">
+                <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -72,7 +72,7 @@
             </li>
             <li>
               <a class="dropdown__link" href="#">
-                <img src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
+                <img class="icon--md" src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Power Supply
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -403,8 +403,8 @@
 
     <section class="minipod">
       <div class="container flex flex-col gap--sm">
-        <div class="flex gap--md">
-          <img src="images/icons/icon_logo.svg" alt="Logo Icon">
+        <div class="flex ai-c gap--md">
+          <img class="icon--lg" src="images/icons/icon_logo.svg" alt="Logo Icon">
           <h2 class="minipod__heading flex flex-col">M300 <span class="text--emphasis text--blue">Minipod</span></h2>
         </div>
         <p class="minipod__body">
@@ -438,7 +438,7 @@
           </picture>
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
-              <img src="images/icons/icon_filter.svg" alt="">
+              <img class="icon--md" src="images/icons/icon_filter.svg" alt="">
               <h6 class="app__subheading">Fully Control & Automations</h6>
             </div>
             <h4 class="app__heading">Configure your Minipods with our smooth, easy-to-use, brand new UI.</h4>
@@ -461,7 +461,7 @@
         <div class="app__container flex jc-c ai-c gap--sm">
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
-              <img src="images/icons/icon_monitor.svg" alt="">
+              <img class="icon--md" src="images/icons/icon_monitor.svg" alt="">
               <h6 class="app__subheading app__subheading--blue">Monitor everything, anywhere, anytime</h6>
             </div>
             <h4 class="app__heading app__heading--dark-blue">Analyze your Minipod in real time from wherever you are.
@@ -493,7 +493,7 @@
           </picture>
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
-              <img src="images/icons/icon_alerts.svg" alt="">
+              <img class="icon--md" src="images/icons/icon_alerts.svg" alt="">
               <h6 class="app__subheading">Receive Notifications & Alerts</h6>
             </div>
             <h4 class="app__heading">Set up notifications and your Minipod will provide vital event alerts.</h4>
@@ -553,7 +553,7 @@
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
-              <img src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
+              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h5 class="list-item__heading">Austin</h5>
                 <span class="list-item__subheading">from Genesis Digital Assets</span>
@@ -566,7 +566,7 @@
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
-              <img src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
+              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h5 class="list-item__heading">Austin</h5>
                 <span class="list-item__subheading">from Genesis Digital Assets</span>
@@ -579,7 +579,7 @@
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
-              <img src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
+              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h5 class="list-item__heading">Austin</h5>
                 <span class="list-item__subheading">from Genesis Digital Assets</span>
@@ -592,7 +592,7 @@
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
-              <img src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
+              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h5 class="list-item__heading">Austin</h5>
                 <span class="list-item__subheading">from Genesis Digital Assets</span>
@@ -605,7 +605,7 @@
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
-              <img src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
+              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h5 class="list-item__heading">Austin</h5>
                 <span class="list-item__subheading">from Genesis Digital Assets</span>
@@ -618,7 +618,7 @@
             </p>
             <div class="list-item__divider"></div>
             <div class="flex gap--md ai-c">
-              <img src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
+              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
                 <h5 class="list-item__heading">Austin</h5>
                 <span class="list-item__subheading">from Genesis Digital Assets</span>
@@ -798,8 +798,8 @@
           <small class="footer__copyright">Privacy Policy & Disclaimer</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <img class="icon--sm" class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="icon--sm" class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
