increased accessibility on navbar

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
       </a>
 
       <ul class="navbar__links">
-        <ul class="dropdown">
-          <li class="dropdown__title">Products
+        <li class="dropdown">
+          <span class="dropdown__title">Products
             <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M2.5 1L7.95455 6L2.5 11" />
             </svg>
-          </li>
+          </span>
           <ul class="dropdown__menu">
             <li>
               <a class="dropdown__link" href="products-minipod.html">
@@ -88,7 +88,7 @@
               </a>
             </li>
           </ul>
-        </ul>
+        </li>
         <li><a class="navbar__link" href="team.html">Team</a></li>
         <li><a class="navbar__link" href="merch.html">Merch</a></li>
         <li><a class="navbar__link" href="faq.html">Faq</a></li>
