minipod page accessibility improvements

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -53,7 +53,7 @@
           <ul class="dropdown__menu">
             <li>
               <a class="dropdown__link" href="products-minipod.html">
-                <img src="images/icons/icon_minipod.svg" alt="Minipod Icon">
+                <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -70,7 +70,7 @@
             </li>
             <li>
               <a class="dropdown__link" href="#">
-                <img src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
+                <img class="icon--md" src="images/icons/icon_power-supply.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Power Supply
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -114,7 +114,7 @@
     <section class="hero flex flex-col ai-c">
 
       <div class="hero__text hero__text--product flex flex-col ai-c">
-        <h4>Featured Product</h4>
+        <h4>cardd Product</h4>
         <h1>M300 <emphasis class="text--blue">Minipod</emphasis>
         </h1>
       </div>
@@ -310,85 +310,85 @@
 
   <main class="main main__minipod">
 
-    <section class="features">
-      <div class="feature-1 flex flex-col gap--md">
+    <section class="card-grid">
+      <div class="card-1 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img src="images/icons/icon_power.svg" alt="Power Input Icon">
+          <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
           <h6>Power Input</h6>
         </div>
-        <ul class="feature__list flex flex-col gap--md">
-          <li class="feature__list-item flex">Input voltage provided at 415Y240</li>
-          <li class="feature__list-item flex">380-415 Volts 5 Wire
+        <ul class="card__list flex flex-col gap--md">
+          <li class="card__list-item flex">Input voltage provided at 415Y240</li>
+          <li class="card__list-item flex">380-415 Volts 5 Wire
             (3 Poles, Neutral + Ground)</li>
-          <li class="feature__list-item flex">220-240 Volts Primary to Neutral</li>
+          <li class="card__list-item flex">220-240 Volts Primary to Neutral</li>
         </ul>
       </div>
-      <div class="feature-2 flex flex-col gap--md">
+      <div class="card-2 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img src="images/icons/icon_fan.svg" alt="Air Intake System Icon">
+          <img class="icon--md" src="images/icons/icon_fan.svg" alt="Air Intake System Icon">
           <h6>Air Intake System</h6>
         </div>
-        <ul class="feature__list flex flex-col gap--md">
-          <li class="feature__list-item flex">Awning-based intake system</li>
-          <li class="feature__list-item flex">38% increase over standard louver design</li>
-          <li class="feature__list-item flex">4" or 2" pleated filters Merv 5 to 15</li>
-          <li class="feature__list-item flex">Standard filter size of 24” x 24” x 4”</li>
-          <li class="feature__list-item flex">Replacements from Digital Shovel or other vendors</li>
+        <ul class="card__list flex flex-col gap--md">
+          <li class="card__list-item flex">Awning-based intake system</li>
+          <li class="card__list-item flex">38% increase over standard louver design</li>
+          <li class="card__list-item flex">4" or 2" pleated filters Merv 5 to 15</li>
+          <li class="card__list-item flex">Standard filter size of 24” x 24” x 4”</li>
+          <li class="card__list-item flex">Replacements from Digital Shovel or other vendors</li>
         </ul>
       </div>
-      <div class="feature-3 flex flex-col gap--md">
+      <div class="card-3 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img src="images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
+          <img class="icon--md" src="images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
           <h6>Smart Power Distribution Unit (SPDU)</h6>
         </div>
-        <ul class="feature__list flex flex-col gap--md">
-          <li class="feature__list-item flex">Each MINIPOD is equipped with two SPDUs</li>
-          <li class="feature__list-item flex">96 - C19 outlets with a 20A dedicated breaker per outlet</li>
-          <li class="feature__list-item flex">Allows max wattage while providing max protection</li>
-          <li class="feature__list-item flex">Individual port monitoring and switching</li>
-          <li class="feature__list-item flex">Fitted with a UL 489 Listed 350A 3 phase main breaker, tied to a common
+        <ul class="card__list flex flex-col gap--md">
+          <li class="card__list-item flex">Each MINIPOD is equipped with two SPDUs</li>
+          <li class="card__list-item flex">96 - C19 outlets with a 20A dedicated breaker per outlet</li>
+          <li class="card__list-item flex">Allows max wattage while providing max protection</li>
+          <li class="card__list-item flex">Individual port monitoring and switching</li>
+          <li class="card__list-item flex">Fitted with a UL 489 Listed 350A 3 phase main breaker, tied to a common
             overhead mounted busway</li>
         </ul>
       </div>
-      <div class="feature-4 flex flex-col gap--md">
+      <div class="card-4 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img src="images/icons/icon_cooling.svg" alt="Cooling System Icon">
+          <img class="icon--md" src="images/icons/icon_cooling.svg" alt="Cooling System Icon">
           <h6>Cooling System</h6>
         </div>
-        <ul class="feature__list flex flex-col gap--md">
-          <li class="feature__list-item flex">Each shelf is fitted with a CNC cut hot aisle containment barrier,
+        <ul class="card__list flex flex-col gap--md">
+          <li class="card__list-item flex">Each shelf is fitted with a CNC cut hot aisle containment barrier,
             improving laminar flow</li>
-          <li class="feature__list-item flex">4 x 15,000 CFM fans, operating in various stages</li>
+          <li class="card__list-item flex">4 x 15,000 CFM fans, operating in various stages</li>
         </ul>
       </div>
-      <div class="feature-5 flex flex-col gap--md">
+      <div class="card-5 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img src="images/icons/icon_mining.svg" alt="Mining Capacity Icon">
+          <img class="icon--md" src="images/icons/icon_mining.svg" alt="Mining Capacity Icon">
           <h6>Mining Capacity</h6>
         </div>
-        <ul class="feature__list flex flex-col gap--md">
-          <li class="feature__list-item flex">8 shelves 85” wide and 11.7” tall</li>
-          <li class="feature__list-item flex">Quick change back-sheets on a per-row basis</li>
-          <li class="feature__list-item flex">Supports 88 S19 miners and 40 4U GPUs</li>
+        <ul class="card__list flex flex-col gap--md">
+          <li class="card__list-item flex">8 shelves 85” wide and 11.7” tall</li>
+          <li class="card__list-item flex">Quick change back-sheets on a per-row basis</li>
+          <li class="card__list-item flex">Supports 88 S19 miners and 40 4U GPUs</li>
         </ul>
       </div>
-      <div class="feature-6 flex flex-col gap--md">
+      <div class="card-6 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img src="images/icons/icon_security.svg" alt="Enhanced Security Icon">
+          <img class="icon--md" src="images/icons/icon_security.svg" alt="Enhanced Security Icon">
           <h6>Enhanced Security</h6>
         </div>
-        <ul class="feature__list flex flex-col gap--md">
-          <li class="feature__list-item flex">Standard mechanical door lock</li>
-          <li class="feature__list-item flex">Upgradeable to a smart door lock</li>
-          <li class="feature__list-item flex">Exterior and internal IR smart cameras</li>
+        <ul class="card__list flex flex-col gap--md">
+          <li class="card__list-item flex">Standard mechanical door lock</li>
+          <li class="card__list-item flex">Upgradeable to a smart door lock</li>
+          <li class="card__list-item flex">Exterior and internal IR smart cameras</li>
         </ul>
       </div>
-      <div class="feature-7 flex ai-c gap--md">
-        <img src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+      <div class="card-7 flex ai-c gap--md">
+        <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
         <h6>Total Capacity</h6>
         <h6 class="text--blue">300kW</h6>
       </div>
-      <a href="#" class="feature-8 btn btn--primary btn--feature flex ai-c jc-c gap--sm">Place Order
+      <a href="#" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
@@ -397,8 +397,8 @@
             stroke-linejoin="round" />
         </svg>
       </a>
-      <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-        <img src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+      <div class="card-9 minipod__set-detail flex ai-c gap--md">
+        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6>Approx. Cost</h6>
         <h6 class="text--blue">$39,999 - $40,500</h6>
       </div>
@@ -409,7 +409,7 @@
         <h2 class="minipod__heading">
           <span class="text--blue">Included</span> with your Minipod
         </h2>
-        <p class="minipod__body">
+        <p class="minipod__body text--center">
           Main container, racking, back-sheets, Smart PDUs,
           4X ventilation fan, ATMS and awning-based intake system.
         </p>
@@ -443,18 +443,18 @@
             <img src="images/illustrations/minipod-3set.svg" alt="Minipod 3 Unit Set Illustration">
             <div class="flex flex-col gap--sm">
               <h4>3 Unit Set</h4>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">900kW</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Not Included</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$113,997 - $130,500</h6>
               </div>
@@ -465,18 +465,18 @@
             <img src="images/illustrations/minipod-4set.svg" alt="Minipod 4 Unit Set Illustration">
             <div class="flex flex-col gap--sm">
               <h4>4 Unit Set</h4>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">900kW</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Not Included</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$113,997 - $130,500</h6>
               </div>
@@ -487,18 +487,18 @@
             <img src="images/illustrations/minipod-6set.svg" alt="Minipod 6 Unit Set Illustration">
             <div class="flex flex-col gap--sm">
               <h4>6 Unit Set</h4>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">900kW</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Not Included</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$113,997 - $130,500</h6>
               </div>
@@ -509,18 +509,18 @@
             <img src="images/illustrations/minipod-8set.svg" alt="Minipod 8 Unit Set Illustration">
             <div class="flex flex-col gap--sm">
               <h4>8 Unit Set</h4>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">900kW</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Not Included</h6>
               </div>
-              <div class="feature-9 minipod__set-detail flex ai-c gap--md">
-                <img src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+              <div class="card-9 minipod__set-detail flex ai-c gap--md">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$113,997 - $130,500</h6>
               </div>
@@ -596,7 +596,7 @@
                 <td class="text--emphasis">Upon Request</td>
               </tr>
               <tr class="table__row table__row--add-border">
-                <th class="table__heading">Features</th>
+                <th class="table__heading">cards</th>
               </tr>
               <tr class="table__row">
                 <th class="table__subheading">
